# asterisklint-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  MANIFEST.in  README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  coverage.yml  dependabot-validate.yml  main.yml  pylint.yml
asterisklint_hooks/: dialplan_check.py  dialplan_check_al.py
tests/: test_almain.py  test_main.py
