[metadata]
description = asterisklint wrapper scripts and pre-commit hooks
url = https://github.com/VCTLabs/asterisklint-hooks
author = Stephen L Arnold
email = nerdboy@gentoo.org
long_description = file: README.rst
long_description_content_type = text/rst; charset=UTF-8
license_expression = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Environment :: Console
    Topic :: Software Development
    Topic :: Software Development :: Testing

keywords =
    pre-commit
    hooks
    asterisk

[options]
python_requires = >= 3.7

packages = find:
zip_safe = True

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    dialplan-check = asterisklint_hooks.dialplan_check:main
    dialplan-check-al = asterisklint_hooks.dialplan_check_al:main

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests

max-line-length = 90
